Refactor test class to use JUnit 5 and update method signatures